Further warning fixes (#13489)
* further warning fixxes

* further warning fixxes